Fixed collapsing issue

--- a/inc/plugins/inferno/templates/shoutbox.html
+++ b/inc/plugins/inferno/templates/shoutbox.html
@@ -6,7 +6,7 @@
 		<tr>
 		<td class="thead" colspan="5">
 			<div class="expcolimage">
-				<img id="cat1_img" class="expander" title="[-]" alt="[-]" src="images/collapse.gif" style="cursor: pointer;">
+				<img id="inferno_img" class="expander" title="[-]" alt="[-]" src="images/collapse.png" style="cursor: pointer;">
 			</div>
 			<div style="text-align:center;">
 				<strong>
@@ -16,7 +16,7 @@
 			</td>
 		</tr>
 	</thead>
-	<tbody id="cat_1_e" style="">
+	<tbody id="inferno_e" style="">
 		<tr>
 			<td class="trow1">
 				<div class="inferno_shoutbox">
