--- a/inc/plugins/inferno/templates/shoutbox.html
+++ b/inc/plugins/inferno/templates/shoutbox.html
@@ -1,7 +1,7 @@
 <script id="inferno_js" type="text/javascript" src="{$mybb->settings['bburl']}/inc/plugins/inferno/inferno.js.php"></script>
 
 <!-- Inferno Shoutbox Lite: Version {inferno_version} Created by: Mattbox Solutions -->
-<table class="tborder inferno_table" cellspacing="1" cellpadding="4" border="0">
+<table border="0" cellspacing="{$theme['borderwidth']}" cellpadding="{$theme['tablespace']}" class="tborder inferno_table">
 	<thead>
 		<tr>
 		<td class="thead" colspan="5">
