--- a/inc/plugins/inferno/templates/popup.html
+++ b/inc/plugins/inferno/templates/popup.html
@@ -1,16 +1,16 @@
+<title>{inferno_shoutbox_title}</title>
 <script id="inferno_js" type="text/javascript" src="{$mybb->settings['bburl']}/inc/plugins/inferno/inferno.js.php"></script>
 <script type="text/javascript" src="{$mybb->settings['bburl']}/jscripts/jquery.js" ></script>
-
-
 <!-- Inferno Shoutbox Lite: Version {inferno_version} Created by: Mattbox Solutions -->
-<table class="tborder inferno_table" cellspacing="1" cellpadding="4" border="0">
+</head>
+<body>
+<div id="container" style="min-width: 680px;">
+<table border="0" cellspacing="{$theme['borderwidth']}" cellpadding="{$theme['tablespace']}" class="tborder inferno_table">
 	<thead>
 		<tr>
 		<td class="thead" colspan="5">
 			<div style="text-align:center;">
-				<strong>
-					<a href="{$mybb->settings['bburl']}/infernoshout.php?action=archive" title="{inferno_shoutbox_title} Archive">{inferno_shoutbox_title}</a>
-				</strong>
+				<strong>{inferno_shoutbox_title}</strong>
 			</div>
 			</td>
 		</tr>
@@ -19,9 +19,7 @@
 		<tr>
 			<td class="trow1">
 				<div class="inferno_shoutbox">
-
 					<div id="inferno_smilies" align="center"></div>
-
 					<div id="inferno_edit_shout" style="display: none;">
 						<form name="updateshout" autocomplete="off" id="newquery">
 							<table class="inputTable">
@@ -38,7 +36,6 @@
 							</table>
 						</form>
 					</div>
-
 					<!-- Text Entry Table -->
 					<div class="newquery">
 						<form name="newshout" autocomplete="off" id="newquery">
@@ -62,20 +59,16 @@
 						</form>
 					</div>
 					<!-- End Text Entry -->
-
 					<div id="inferno_links" class="inferno_links">
-						<div><a href="#" onclick="javascript: inferno.init(); return false;">{$lang->isb_shoutboxtab}</a></div>
-						<div><a href="#" onclick="javascript: inferno.load_active_users(); return false;">{$lang->isb_activetab}</a>: <span id="inferno_active_users">{inferno_active_users}</span></div>
+						<div><a href="javascript:void(0)" onclick="javascript: inferno.init(); return false;">{$lang->isb_shoutboxtab}</a></div>
+						<div><a href="javascript:void(0)" onclick="javascript: inferno.load_active_users(); return false;">{$lang->isb_activetab}</a>: <span id="inferno_active_users">{inferno_active_users}</span></div>
 					</div>
-
 					<div id="inferno_alert" class="inferno_alert_inactive"></div>
-
 					<!-- Shoutbox Content -->
 					<div class="inferno_content" id="inferno_content" style="height:{inferno_popup_height}px;">Loading...</div>
 					<!-- End Shoutbox Content -->
-
 				</div>
 			</td>
 		</tr>
 </table>
-<br />
+</div>
